@@ -1,3 +1,6 @@
+  10 Nov 2021; Agostino Sarubbo <ago@gentoo.org> -uniloader-21.04.6.ebuild:
+  app-metrics/uniloader: remove old
+
 *uniloader-21.04.8 (10 Nov 2021)
 
   10 Nov 2021; Agostino Sarubbo <ago@gentoo.org> +uniloader-21.04.8.ebuild:
